<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:weightSum="12">

        <!--top page of My Cart-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/main_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/bigIconCart"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_add_shopping_cart_24"
                    app:tint="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/iconCartTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/textCartActivity"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Layout for Quantity and Sum Price text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="11">

            <ImageView
                android:id="@+id/imgInCart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionInCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/priceInCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantityTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="6">

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/sumPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/sumPrice"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toTopOf="@id/rvProductList"
            app:layout_constraintStart_toStartOf="parent" />

        <!--Layout for list of product added -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddedProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <!-- Layout for total price and checkout -->
        <LinearLayout
            android:id="@+id/checkoutArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/search_background"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textTotal"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultTotalPrice"
                android:textColor="@color/red"
                android:textSize="21dp" />

            <ImageView
                android:id="@+id/btnCheckout"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_payment_24"
                app:tint="@color/blue_popular" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





